--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ToHeavenProject
+application.vendor=LENOVO
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,11 +33,16 @@ dist.jar=${dist.dir}/ToHeavenProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ToHeavenProject
+endorsed.classpath=
 excludes=
+file.reference.flatlaf-3.5.1.jar=..\\..\\Downloads\\flatlaf-3.5.1.jar
+file.reference.flatlaf-theme-editor-3.5.1.jar=..\\..\\Downloads\\flatlaf-theme-editor-3.5.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-3.5.1.jar}:\
+    ${file.reference.flatlaf-theme-editor-3.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,7 +78,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ToHeavenProject
-main.class=testproj.NewJFrame1
+main.class=ToHeaven.MainFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
