--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,22 @@ dist.jlink.output=${dist.jlink.dir}/ToHeavenProject
 endorsed.classpath=
 excludes=
 file.reference.commons-collections4-4.1.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-1=dist\\lib\\commons-collections4-4.1.jar
+file.reference.commons-io-2.11.0.jar=dist\\lib\\commons-io-2.11.0.jar
 file.reference.flatlaf-3.5.1.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/flatlaf-3.5.1.jar
+file.reference.flatlaf-3.5.1.jar-1=dist\\lib\\flatlaf-3.5.1.jar
+file.reference.log4j-api-2.17.0.jar=dist\\lib\\log4j-api-2.17.0.jar
+file.reference.log4j-core-2.17.2.jar=dist\\lib\\log4j-core-2.17.2.jar
 file.reference.poi-3.17.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/poi-3.17.jar
+file.reference.poi-3.17.jar-1=dist\\lib\\poi-3.17.jar
+file.reference.poi-5.2.3.jar=dist\\lib\\poi-5.2.3.jar
 file.reference.poi-ooxml-3.17.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/poi-ooxml-3.17.jar
+file.reference.poi-ooxml-3.17.jar-1=dist\\lib\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-5.2.3.jar=dist\\lib\\poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-schemas-3.17.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/poi-ooxml-schemas-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar-1=dist\\lib\\poi-ooxml-schemas-3.17.jar
 file.reference.xmlbeans-2.6.0.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-1=dist\\lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -51,7 +62,18 @@ javac.classpath=\
     ${file.reference.poi-3.17.jar}:\
     ${file.reference.poi-ooxml-3.17.jar}:\
     ${file.reference.poi-ooxml-schemas-3.17.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-collections4-4.1.jar-1}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.flatlaf-3.5.1.jar-1}:\
+    ${file.reference.log4j-api-2.17.0.jar}:\
+    ${file.reference.log4j-core-2.17.2.jar}:\
+    ${file.reference.poi-3.17.jar-1}:\
+    ${file.reference.poi-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar-1}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar-1}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
