--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,21 +37,32 @@ endorsed.classpath=
 excludes=
 file.reference.commons-collections4-4.1.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/commons-collections4-4.1.jar
 file.reference.commons-collections4-4.1.jar-1=dist\\lib\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-2=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\commons-collections4-4.1.jar
 file.reference.commons-io-2.11.0.jar=dist\\lib\\commons-io-2.11.0.jar
+file.reference.commons-io-2.11.0.jar-1=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\commons-io-2.11.0.jar
 file.reference.flatlaf-3.5.1.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/flatlaf-3.5.1.jar
 file.reference.flatlaf-3.5.1.jar-1=dist\\lib\\flatlaf-3.5.1.jar
+file.reference.flatlaf-3.5.1.jar-2=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\flatlaf-3.5.1.jar
 file.reference.log4j-api-2.17.0.jar=dist\\lib\\log4j-api-2.17.0.jar
+file.reference.log4j-api-2.17.0.jar-1=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\log4j-api-2.17.0.jar
 file.reference.log4j-core-2.17.2.jar=dist\\lib\\log4j-core-2.17.2.jar
+file.reference.log4j-core-2.17.2.jar-1=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\log4j-core-2.17.2.jar
 file.reference.poi-3.17.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/poi-3.17.jar
 file.reference.poi-3.17.jar-1=dist\\lib\\poi-3.17.jar
+file.reference.poi-3.17.jar-2=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\poi-3.17.jar
 file.reference.poi-5.2.3.jar=dist\\lib\\poi-5.2.3.jar
+file.reference.poi-5.2.3.jar-1=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\poi-5.2.3.jar
 file.reference.poi-ooxml-3.17.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/poi-ooxml-3.17.jar
 file.reference.poi-ooxml-3.17.jar-1=dist\\lib\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-3.17.jar-2=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\poi-ooxml-3.17.jar
 file.reference.poi-ooxml-5.2.3.jar=dist\\lib\\poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar-1=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-schemas-3.17.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/poi-ooxml-schemas-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar-1=dist\\lib\\poi-ooxml-schemas-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar-2=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\poi-ooxml-schemas-3.17.jar
 file.reference.xmlbeans-2.6.0.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/xmlbeans-2.6.0.jar
 file.reference.xmlbeans-2.6.0.jar-1=dist\\lib\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-2=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -73,7 +84,60 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.17.jar-1}:\
     ${file.reference.poi-ooxml-5.2.3.jar}:\
     ${file.reference.poi-ooxml-schemas-3.17.jar-1}:\
-    ${file.reference.xmlbeans-2.6.0.jar-1}
+    ${file.reference.xmlbeans-2.6.0.jar-1}:\
+    ${libs.absolutelayout.classpath}:\
+    ${libs.CopyLibs.classpath}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}:\
+    ${libs.graaljs.classpath}:\
+    ${libs.groovy-all.classpath}:\
+    ${libs.hamcrest.classpath}:\
+    ${libs.jakartaee-api-10.0.classpath}:\
+    ${libs.jakartaee-api-11.0.classpath}:\
+    ${libs.jakartaee-api-8.0.classpath}:\
+    ${libs.jakartaee-api-9.0.classpath}:\
+    ${libs.jakartaee-web-api-10.0.classpath}:\
+    ${libs.jakartaee-web-api-11.0.classpath}:\
+    ${libs.jakartaee-web-api-8.0.classpath}:\
+    ${libs.jakartaee-web-api-9.0.classpath}:\
+    ${libs.javaee-api-6.0.classpath}:\
+    ${libs.javaee-endorsed-api-6.0.classpath}:\
+    ${libs.javaee-api-7.0.classpath}:\
+    ${libs.javaee-endorsed-api-7.0.classpath}:\
+    ${libs.javaee-api-8.0.classpath}:\
+    ${libs.javaee-web-api-6.0.classpath}:\
+    ${libs.javaee-web-api-7.0.classpath}:\
+    ${libs.javaee-web-api-8.0.classpath}:\
+    ${libs.jaxb.classpath}:\
+    ${libs.JAXB-ENDORSED.classpath}:\
+    ${libs.jaxws21.classpath}:\
+    ${libs.restlib.classpath}:\
+    ${libs.jsf20.classpath}:\
+    ${libs.jsp-compilation.classpath}:\
+    ${libs.jsp-compilation-syscp.classpath}:\
+    ${libs.jsp-compiler.classpath}:\
+    ${libs.jstl.classpath}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.junit_5.classpath}:\
+    ${libs.JWSAntTasks.classpath}:\
+    ${libs.metro.classpath}:\
+    ${libs.jpa20-persistence.classpath}:\
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${libs.primefaces.classpath}:\
+    ${libs.spring-framework500.classpath}:\
+    ${libs.spring-webmvc5.0.classpath}:\
+    ${libs.testng.classpath}:\
+    ${file.reference.commons-collections4-4.1.jar-2}:\
+    ${file.reference.commons-io-2.11.0.jar-1}:\
+    ${file.reference.flatlaf-3.5.1.jar-2}:\
+    ${file.reference.log4j-api-2.17.0.jar-1}:\
+    ${file.reference.log4j-core-2.17.2.jar-1}:\
+    ${file.reference.poi-3.17.jar-2}:\
+    ${file.reference.poi-5.2.3.jar-1}:\
+    ${file.reference.poi-ooxml-3.17.jar-2}:\
+    ${file.reference.poi-ooxml-5.2.3.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar-2}:\
+    ${file.reference.xmlbeans-2.6.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
