--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,31 +38,42 @@ excludes=
 file.reference.commons-collections4-4.1.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/commons-collections4-4.1.jar
 file.reference.commons-collections4-4.1.jar-1=dist\\lib\\commons-collections4-4.1.jar
 file.reference.commons-collections4-4.1.jar-2=..\\ToHeavenProject\\dist\\lib\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\commons-collections4-4.1.jar
 file.reference.commons-io-2.11.0.jar=dist\\lib\\commons-io-2.11.0.jar
 file.reference.commons-io-2.11.0.jar-1=..\\ToHeavenProject\\dist\\lib\\commons-io-2.11.0.jar
+file.reference.commons-io-2.11.0.jar-2=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\commons-io-2.11.0.jar
 file.reference.flatlaf-3.5.1.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/flatlaf-3.5.1.jar
 file.reference.flatlaf-3.5.1.jar-1=dist\\lib\\flatlaf-3.5.1.jar
 file.reference.flatlaf-3.5.1.jar-2=..\\ToHeavenProject\\dist\\lib\\flatlaf-3.5.1.jar
+file.reference.flatlaf-3.5.1.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\flatlaf-3.5.1.jar
 file.reference.log4j-api-2.17.0.jar=dist\\lib\\log4j-api-2.17.0.jar
 file.reference.log4j-api-2.17.0.jar-1=..\\ToHeavenProject\\dist\\lib\\log4j-api-2.17.0.jar
+file.reference.log4j-api-2.17.0.jar-2=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\log4j-api-2.17.0.jar
 file.reference.log4j-core-2.17.2.jar=dist\\lib\\log4j-core-2.17.2.jar
 file.reference.log4j-core-2.17.2.jar-1=..\\ToHeavenProject\\dist\\lib\\log4j-core-2.17.2.jar
+file.reference.log4j-core-2.17.2.jar-2=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\log4j-core-2.17.2.jar
 file.reference.poi-3.17.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/poi-3.17.jar
 file.reference.poi-3.17.jar-1=dist\\lib\\poi-3.17.jar
 file.reference.poi-3.17.jar-2=..\\ToHeavenProject\\dist\\lib\\poi-3.17.jar
+file.reference.poi-3.17.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\poi-3.17.jar
 file.reference.poi-5.2.3.jar=dist\\lib\\poi-5.2.3.jar
 file.reference.poi-5.2.3.jar-1=..\\ToHeavenProject\\dist\\lib\\poi-5.2.3.jar
+file.reference.poi-5.2.3.jar-2=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\poi-5.2.3.jar
 file.reference.poi-ooxml-3.17.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/poi-ooxml-3.17.jar
 file.reference.poi-ooxml-3.17.jar-1=dist\\lib\\poi-ooxml-3.17.jar
 file.reference.poi-ooxml-3.17.jar-2=..\\ToHeavenProject\\dist\\lib\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-3.17.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\poi-ooxml-3.17.jar
 file.reference.poi-ooxml-5.2.3.jar=dist\\lib\\poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-5.2.3.jar-1=..\\ToHeavenProject\\dist\\lib\\poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar-2=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-schemas-3.17.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/poi-ooxml-schemas-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar-1=dist\\lib\\poi-ooxml-schemas-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar-2=..\\ToHeavenProject\\dist\\lib\\poi-ooxml-schemas-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\poi-ooxml-schemas-3.17.jar
 file.reference.xmlbeans-2.6.0.jar=../../../../Desktop/apache-poi-src-5.3.0-20240625/xmlbeans-2.6.0.jar
 file.reference.xmlbeans-2.6.0.jar-1=dist\\lib\\xmlbeans-2.6.0.jar
 file.reference.xmlbeans-2.6.0.jar-2=..\\ToHeavenProject\\dist\\lib\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_master\\dist\\lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -95,9 +106,20 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.17.jar-2}:\
     ${file.reference.xmlbeans-2.6.0.jar-2}:\
     ${file.reference.poi-ooxml-3.17.jar-2}:\
-    ${file.reference.poi-ooxml-5.2.3.jar-1}
+    ${file.reference.poi-ooxml-5.2.3.jar-1}:\
+    ${file.reference.commons-collections4-4.1.jar-3}:\
+    ${file.reference.commons-io-2.11.0.jar-2}:\
+    ${file.reference.flatlaf-3.5.1.jar-3}:\
+    ${file.reference.log4j-api-2.17.0.jar-2}:\
+    ${file.reference.log4j-core-2.17.2.jar-2}:\
+    ${file.reference.poi-3.17.jar-3}:\
+    ${file.reference.poi-5.2.3.jar-2}:\
+    ${file.reference.poi-ooxml-5.2.3.jar-2}:\
+    ${file.reference.poi-ooxml-3.17.jar-3}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar-3}:\
+    ${file.reference.xmlbeans-2.6.0.jar-3}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=\ --enable-preview
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
@@ -159,7 +181,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=\ --enable-preview
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
