--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -119,7 +119,7 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.17.jar-3}:\
     ${file.reference.xmlbeans-2.6.0.jar-3}
 # Space-separated list of extra javac options
-javac.compilerargs=\ --enable-preview
+javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
