--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,50 +35,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ToHeavenProject
 endorsed.classpath=
 excludes=
-file.reference.commons-collections4-4.1.jar=..\\..\\SoftwareProject\\dist\\lib\\commons-collections4-4.1.jar
-file.reference.commons-collections4-4.1.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\commons-collections4-4.1.jar
-file.reference.commons-collections4-4.1.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\commons-collections4-4.1.jar
-file.reference.commons-collections4-4.1.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_aom\\dist\\lib\\commons-collections4-4.1.jar
-file.reference.commons-io-2.11.0.jar=..\\..\\SoftwareProject\\dist\\lib\\commons-io-2.11.0.jar
-file.reference.commons-io-2.11.0.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\commons-io-2.11.0.jar
-file.reference.commons-io-2.11.0.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\commons-io-2.11.0.jar
-file.reference.commons-io-2.11.0.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_aom\\dist\\lib\\commons-io-2.11.0.jar
-file.reference.flatlaf-3.5.1.jar=..\\..\\SoftwareProject\\dist\\lib\\flatlaf-3.5.1.jar
-file.reference.flatlaf-3.5.1.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\flatlaf-3.5.1.jar
-file.reference.flatlaf-3.5.1.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\flatlaf-3.5.1.jar
-file.reference.flatlaf-3.5.1.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_aom\\dist\\lib\\flatlaf-3.5.1.jar
-file.reference.log4j-api-2.17.0.jar=..\\..\\SoftwareProject\\dist\\lib\\log4j-api-2.17.0.jar
-file.reference.log4j-api-2.17.0.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\log4j-api-2.17.0.jar
-file.reference.log4j-api-2.17.0.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\log4j-api-2.17.0.jar
-file.reference.log4j-api-2.17.0.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_aom\\dist\\lib\\log4j-api-2.17.0.jar
-file.reference.log4j-core-2.17.2.jar=..\\..\\SoftwareProject\\dist\\lib\\log4j-core-2.17.2.jar
-file.reference.log4j-core-2.17.2.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\log4j-core-2.17.2.jar
-file.reference.log4j-core-2.17.2.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\log4j-core-2.17.2.jar
-file.reference.log4j-core-2.17.2.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_aom\\dist\\lib\\log4j-core-2.17.2.jar
-file.reference.poi-3.17.jar=..\\..\\SoftwareProject\\dist\\lib\\poi-3.17.jar
-file.reference.poi-3.17.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\poi-3.17.jar
-file.reference.poi-3.17.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-3.17.jar
-file.reference.poi-3.17.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_aom\\dist\\lib\\poi-3.17.jar
-file.reference.poi-5.2.3.jar=..\\..\\SoftwareProject\\dist\\lib\\poi-5.2.3.jar
-file.reference.poi-5.2.3.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\poi-5.2.3.jar
-file.reference.poi-5.2.3.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-5.2.3.jar
-file.reference.poi-5.2.3.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_aom\\dist\\lib\\poi-5.2.3.jar
-file.reference.poi-ooxml-3.17.jar=..\\..\\SoftwareProject\\dist\\lib\\poi-ooxml-3.17.jar
-file.reference.poi-ooxml-3.17.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\poi-ooxml-3.17.jar
-file.reference.poi-ooxml-3.17.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-ooxml-3.17.jar
-file.reference.poi-ooxml-3.17.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_aom\\dist\\lib\\poi-ooxml-3.17.jar
-file.reference.poi-ooxml-5.2.3.jar=..\\..\\SoftwareProject\\dist\\lib\\poi-ooxml-5.2.3.jar
-file.reference.poi-ooxml-5.2.3.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\poi-ooxml-5.2.3.jar
-file.reference.poi-ooxml-5.2.3.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-ooxml-5.2.3.jar
-file.reference.poi-ooxml-5.2.3.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_aom\\dist\\lib\\poi-ooxml-5.2.3.jar
-file.reference.poi-ooxml-schemas-3.17.jar=..\\..\\SoftwareProject\\dist\\lib\\poi-ooxml-schemas-3.17.jar
-file.reference.poi-ooxml-schemas-3.17.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\poi-ooxml-schemas-3.17.jar
-file.reference.poi-ooxml-schemas-3.17.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-ooxml-schemas-3.17.jar
-file.reference.poi-ooxml-schemas-3.17.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_aom\\dist\\lib\\poi-ooxml-schemas-3.17.jar
-file.reference.xmlbeans-2.6.0.jar=..\\..\\SoftwareProject\\dist\\lib\\xmlbeans-2.6.0.jar
-file.reference.xmlbeans-2.6.0.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\xmlbeans-2.6.0.jar
-file.reference.xmlbeans-2.6.0.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\xmlbeans-2.6.0.jar
-file.reference.xmlbeans-2.6.0.jar-3=C:\\Users\\Khao\\Desktop\\SoftwareProject_aom\\dist\\lib\\xmlbeans-2.6.0.jar
+file.reference.commons-collections4-4.1.jar=../UpUpDAO_verCopyCopy/dist/lib/commons-collections4-4.1.jar
+file.reference.commons-io-2.11.0.jar=../UpUpDAO_verCopyCopy/dist/lib/commons-io-2.11.0.jar
+file.reference.flatlaf-3.5.1.jar=../UpUpDAO_verCopyCopy/dist/lib/flatlaf-3.5.1.jar
+file.reference.log4j-api-2.17.0.jar=../UpUpDAO_verCopyCopy/dist/lib/log4j-api-2.17.0.jar
+file.reference.log4j-core-2.17.2.jar=../UpUpDAO_verCopyCopy/dist/lib/log4j-core-2.17.2.jar
+file.reference.poi-3.17.jar=../UpUpDAO_verCopyCopy/dist/lib/poi-3.17.jar
+file.reference.poi-5.2.3.jar=../UpUpDAO_verCopyCopy/dist/lib/poi-5.2.3.jar
+file.reference.poi-ooxml-3.17.jar=../UpUpDAO_verCopyCopy/dist/lib/poi-ooxml-3.17.jar
+file.reference.poi-ooxml-5.2.3.jar=../UpUpDAO_verCopyCopy/dist/lib/poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-schemas-3.17.jar=../UpUpDAO_verCopyCopy/dist/lib/poi-ooxml-schemas-3.17.jar
+file.reference.xmlbeans-2.6.0.jar=../UpUpDAO_verCopyCopy/dist/lib/xmlbeans-2.6.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -94,40 +61,7 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.17.jar}:\
     ${file.reference.poi-ooxml-5.2.3.jar}:\
     ${file.reference.poi-ooxml-schemas-3.17.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${file.reference.commons-collections4-4.1.jar-1}:\
-    ${file.reference.commons-io-2.11.0.jar-1}:\
-    ${file.reference.flatlaf-3.5.1.jar-1}:\
-    ${file.reference.log4j-api-2.17.0.jar-1}:\
-    ${file.reference.log4j-core-2.17.2.jar-1}:\
-    ${file.reference.poi-3.17.jar-1}:\
-    ${file.reference.poi-5.2.3.jar-1}:\
-    ${file.reference.poi-ooxml-3.17.jar-1}:\
-    ${file.reference.poi-ooxml-5.2.3.jar-1}:\
-    ${file.reference.poi-ooxml-schemas-3.17.jar-1}:\
-    ${file.reference.xmlbeans-2.6.0.jar-1}:\
-    ${file.reference.commons-collections4-4.1.jar-2}:\
-    ${file.reference.commons-io-2.11.0.jar-2}:\
-    ${file.reference.flatlaf-3.5.1.jar-2}:\
-    ${file.reference.log4j-api-2.17.0.jar-2}:\
-    ${file.reference.log4j-core-2.17.2.jar-2}:\
-    ${file.reference.poi-3.17.jar-2}:\
-    ${file.reference.poi-5.2.3.jar-2}:\
-    ${file.reference.poi-ooxml-3.17.jar-2}:\
-    ${file.reference.poi-ooxml-5.2.3.jar-2}:\
-    ${file.reference.poi-ooxml-schemas-3.17.jar-2}:\
-    ${file.reference.xmlbeans-2.6.0.jar-2}:\
-    ${file.reference.commons-collections4-4.1.jar-3}:\
-    ${file.reference.commons-io-2.11.0.jar-3}:\
-    ${file.reference.flatlaf-3.5.1.jar-3}:\
-    ${file.reference.log4j-api-2.17.0.jar-3}:\
-    ${file.reference.log4j-core-2.17.2.jar-3}:\
-    ${file.reference.poi-3.17.jar-3}:\
-    ${file.reference.poi-5.2.3.jar-3}:\
-    ${file.reference.poi-ooxml-3.17.jar-3}:\
-    ${file.reference.poi-ooxml-5.2.3.jar-3}:\
-    ${file.reference.poi-ooxml-schemas-3.17.jar-3}:\
-    ${file.reference.xmlbeans-2.6.0.jar-3}
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
